--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@ dist-ssr
 .env.local
 .env.*.local
 
+# Backend env (do not commit your API key)
+backend/.env
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
