--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,4 @@
-VITE_API_KEY=your_gemini_api_key_here
-VITE_GEMINI_API_KEY=your_gemini_api_key_here
+# DO NOT EXPOSE REAL API KEYS HERE
+# Use GitHub Secrets for production instead
+VITE_API_KEY=placeholder_key_for_build
+VITE_GEMINI_API_KEY=placeholder_key_for_build
